# gitlab-user-reports

./: .env.sample  Dockerfile  LICENSE  README.md  docker-compose-all.yml  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  main.py  scheduler.py
app/api/: __init__.py  deps.py  router.py
app/api/routes/: __init__.py  auth.py  gitlab.py  pages.py  user_performance.py  users.py
app/core/: config.py  database.py
app/db/: __init__.py  database.py  dataclasses.py  types.py
app/frontend/: __init__.py
app/frontend/templates/: base.html  (+1 more)
app/models/: user.py
app/schemas/: __init__.py  auth.py  gitlab.py  user.py  user_performance.py
app/services/: __init__.py  gitlab.py  security.py  user_service.py
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  agent.py  prompts.py  schema.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  gitlab.py  performance.py  project_user_performance.py  projects.py  scheduler.py  user_performance.py  users.py
backend/app/cli/: run_scheduler.py
backend/app/core/: config.py  promtps.py
backend/app/db/: __init__.py  database.py
backend/app/schemas/: __init__.py  auth.py  gitlab.py  performance.py  project_user_performance.py  scheduler.py  users.py
backend/app/services/: __init__.py  gitlab.py  performance.py  scheduler.py  security.py
frontend/: Dockerfile  next.config.ts  openapi-ts.config.ts  openapi.json  package-lock.json  package.json
frontend/src/: env.ts  hey-api.ts
frontend/types/: routes.d.ts  validator.ts
(+58 files in other folders)
